<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/st_TelaPrincipalTOP"
            android:id="@+id/textView3"
            android:textSize="@dimen/msg_top"
            android:textStyle="bold"
            android:textColor="#0d1388"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/st_TelaPrincipalSEC"
            android:id="@+id/textView4"
            android:textStyle="italic"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/st_CadastrarProdutos"
            android:id="@+id/btn_CadastrarProdutos"
            android:layout_gravity="center_horizontal"
            android:onClick="call_activity_product_registration"
            />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/st_RealizarVenda"
            android:id="@+id/btn_RealizarVenda"
            android:layout_gravity="center_horizontal"
            android:onClick="call_activity_sale"
            />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/st_GerarRelatorio"
            android:id="@+id/btn_GerarRelatorios"
            android:layout_gravity="center_horizontal"
            android:onClick="call_activity_report"
            />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/st_Configuracoes"
            android:id="@+id/button8"
            android:layout_gravity="center_horizontal"
            android:onClick="call_activity_config"
            />
    </LinearLayout>

</LinearLayout>
