<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/st_CadastroProdutos"
            android:id="@+id/tv_CadastroProduto"
            android:textStyle="bold"
            android:textSize="@dimen/msg_top"
            android:layout_gravity="bottom"
            android:gravity="center"
            />

        <EditText

            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/st_NomeProduto"
            android:autoText="false"
            android:editable="false" />

        <EditText

            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/st_PrecoUnitario"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1">

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/st_CadastrarProdutos"
            android:id="@+id/button5" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/st_Menu"
            android:id="@+id/button6"
            android:enabled="true"
            android:layout_alignParentLeft="false"
            />

    </LinearLayout>

</LinearLayout>